Changes and New Features in 3.3 (2020-01-19):
	* still debugging crisk2.mbart

	* however, crisk3.bart (based on crisk.bart) for
	three causes is now working

Changes and New Features in 3.2 (2019-12-15):
	* adding crisk2.mbart to extend competing risks
	to more than two causes (formerly, cause of interest
	vs. all others) via Multinomial BART (mbart)
 
	* adding surv.gbmm to extend the BART mixed model to survival

Changes and New Features in 3.1 (2019-12-04):
	* addressing new behavior of class function

Changes and New Features in 3.0 (2019-10-17):
	* first version released at bnptools on github 
	https://github.com/rsparapa/bnptools

	* now a C++ header-only class library that can be linked with other
	R packages via Imports/LinkingTo in the DESCRIPTION file
	For an example of how this can be done, see btBART also in bnptools
	But, the API might change, i.e., we are considering the namespace
	BART3

Changes and New Features in 2.6 (2019-07-24):
	* updated vignette with typo corrections and additional info

	* last version on CRAN: frozen to be in synch with JSS article
	
Changes and New Features in 2.5 (2019-06-10):
	* new feature: stratrs function now handles
	continuous data as well categorical

	* bug fix: bartModelMatrix now correctly handles
	all-missing columns with numcut>0 and rm.const=T

	* bug fix: fix gbart syntax error in LPML feature
	
	* bug fix: fix a mc.pbart error which failed
	to recalculate prob.train.mean and prob.test.mean
	based on all chains

Changes and New Features in 2.4 (2019-04-10):
	* change:  per CRAN policy, dynamic libraries are no 
	longer "stripped" on Linux

Changes and New Features in 2.3 (2019-03-27):
	* new feature: adding arguments to surv.pre.bart, surv.bart
	and mc.surv.bart to fine-tune grid of time points and 
	automate creation of time dependent covariates.  These are
	convenience features to make multi-state models easier to
	handle; see new demo leuk

	* change: arguments to rtnorm and rtgamma more user friendly
