@@ -3,8 +3,8 @@ useDynLib('BART3', .registration=TRUE)
 export(wbart, mc.wbart, pwbart, mc.wbart.gse, mc.pwbart)
 export(pbart, mc.pbart)
 export(gbart, mc.gbart)
-export(gbmm, mc.gbmm)
-export(surv.gbmm)
+##export(gbmm, mc.gbmm)
+##export(surv.gbmm)
 export(abart, mc.abart)
 ##export(spbart, mc.spbart)
 export(stratrs, rs.pbart)
